# MRI-LMICs-survey

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  commit_verify.txt  debug_cols.txt  debug_kappa.txt  debug_table5.txt  debug_table5_test.txt  debug_tests.txt  pyproject.toml
06_processing_outputs/: module2_group_profiles.csv  module2_log.txt  module3_log.txt
data/: README.md  data-clean.csv  fleiss_kappa_matrix.csv
docs/: ARCHITECTURE.md  SCIENTOMETRICS_METHODOLOGY.md  STATISTICAL_METHODS.md
manuscript/: abstract.md  competing_interests.md  cover_letter.md  credit_authorship.md  data_availability.md  existing_reviews_comparison.md  lmic_scoring_framework.md
tables/: analysis_calibration_set.csv  analysis_cross_field_generalization.csv  analysis_dataset_diversity.csv  analysis_edge_deployment.csv  analysis_lmic_bias_corrected.csv  analysis_non_mri_papers.csv  analysis_quality_assessment.csv  analysis_quality_summary.csv  analysis_reviewer_bias_summary.csv  analysis_temporal_trends.csv  analysis_tr_by_architecture.csv  analysis_translational_readiness.csv  module2_chi_square_results.csv  module2_mann_whitney_results.csv  module2_sensitivity_analysis.csv  module3_fleiss_kappa_results.csv  table1_study_characteristics.csv  table2_ai_architectures.csv  table3a_overall_metrics.csv  table3b_psnr_by_architecture.csv  table3c_ssim_by_architecture.csv  table3d_metrics_by_field_strength.csv  table3e_psnr_reporting_bias.csv  table3f_ssim_reporting_bias.csv  table4a_lmic_score_distribution.csv  table4b_lmic_indicators.csv  table4c_architecture_high_lmic.csv  table4d_edge_deployment.csv  table5a_random_forest_features.csv  table6b_lmic_by_application.csv  table6c_research_gaps.csv  table_merged_performance_lmic.csv
temporal/: MRI_SR_LMIC_Manuscript_Original_Draft.docx  (+1 more)
(+39 files in other folders)
